# Act

./: .gitignore  README.md  pyproject.toml  stop.txt
app/: app_confirm_runability.py  app_run.py  app_start.py
browser-extension/: main.js
fint/: cc_aocr.py  cc_aocr_ac.py  display.py  multiSS.py  nono.json
macOS/: app_confirm_runability.py  app_run.py  app_start.py  display.py  multiSS.py  nono.json  old_app_run.py
tests/: cad.py  display.py  main.py  multiSS.py  runner.py  test.py
